--- a/templates/courses/list.html
+++ b/templates/courses/list.html
@@ -1,1 +1,28 @@
+{% extends "base.html" %}
 
+{% block title %}Educa | Log-in{% endblock %}
+
+{% block content %}
+<h1>My courses</h1>
+<div class="module">
+	{% for course in object_list %}
+	<div class="course-info">
+		<h3>{{ couse.title }}</h3>
+		<p>
+			<a href="{% url 'course_create' %}" class="button">Edit</a>
+			{% if course.modules.count > 0 %}
+			<a href="{% url 'module_content_list' course.modules.first.id %}">Manage contents</a>
+			{% endif %}
+			<a href="{% url 'course_create' %}" class="button">Delete</a>
+			<a href="{% url 'course_module_update' course.id %}" class="button">Edit modules</a>
+		</p>
+	</div>
+	{% empty %}
+	<p>You have not created any courses yet</p>
+	{% endfor %}
+	<p>
+		<a href="{% url 'course_create' %}" class="button">Create new course</a>
+	</p>
+</div>
+
+{% endblock %}
